# src/src/routes/createUser.js
@@ -1,17 +1,26 @@
-const { Router } = require('express')
+const AsyncRouter = require('express-async-router').AsyncRouter
+const mockDB = require('../mock-db/users')
 
-const router = Router();
+const router = AsyncRouter()
 
 router.post('/', (req, res) => {
     return res.send({
         body: 'Message Received!!'
-    });
+    })
 })
 
-router.post('/createUser', (req, res) => {
-    return res.send({
-        body: 'User creation successful!!'
-    });
+router.post('/createuser', (req, res) => {
+    return mockDB.createUser(req.body).then(function(result) {
+        res.status(result.statusCode)
+        return res.send(result.body)
+    })
+})
+
+router.post('/login', (req, res) => {
+    return mockDB.login(req.body).then(function (result) {
+        res.status(result.statusCode)
+        return res.send(result.body)
+    })
 })
 
 module.exports = router
