# src/swagger.json
@@ -42,14 +42,14 @@
     "http"
   ],
   "paths": {
-    "/user": {
+    "/user/register": {
       "post": {
         "tags": [
           "user"
         ],
-        "summary": "Create user",
-        "description": "This can only be done by the logged in user.",
-        "operationId": "createUser",
+        "summary": "Register user",
+        "description": "Register a new user with the application",
+        "operationId": "register",
         "produces": [
           "application/xml",
           "application/json"
@@ -62,6 +62,15 @@
         "responses": {
           "default": {
             "description": "successful operation"
+          },
+          "200": {
+            "description": "successful operation",
+            "schema": {
+              "type": "string"
+            }
+          },
+          "400": {
+            "description": "Invalid username/password supplied"
           }
         }
       }
@@ -99,18 +108,6 @@
             "description": "successful operation",
             "schema": {
               "type": "string"
-            },
-            "headers": {
-              "X-Rate-Limit": {
-                "type": "integer",
-                "format": "int32",
-                "description": "calls per hour allowed by the user"
-              },
-              "X-Expires-After": {
-                "type": "string",
-                "format": "date-time",
-                "description": "date in UTC when token expires"
-              }
             }
           },
           "400": {
